--- a/app/src/main/res/layout/categories_list_item.xml
+++ b/app/src/main/res/layout/categories_list_item.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:card_view="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -29,28 +27,35 @@
 
 
             <LinearLayout
+                android:id="@+id/rl_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="5dp">
+
+                <TextView
+                    android:id="@+id/textFirst"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:layout_gravity="center"
+                    android:background="@color/colorPrimary"
+                    android:gravity="center"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="28sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tvFullName"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/ivPic"
-                    android:layout_marginStart="4dp"
-                    android:layout_marginEnd="4dp"
-                    android:gravity="center"
-                    android:padding="4dp"
+                    android:layout_below="@+id/lbl_name"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="5dp"
                     android:text="@{Category.name}"
-                    android:textColor="@color/colorPrimary"
-                    android:textSize="26sp"
-                    android:textStyle="bold"
-                    bind:layout_constraintEnd_toEndOf="parent"
-                    bind:layout_constraintStart_toEndOf="@+id/ivPic"
-                    bind:layout_constraintTop_toTopOf="parent"
-                    tools:text="Morris" />
+                    android:textColor="@color/lbl_value"
+                    android:textSize="16sp" />
+
 
             </LinearLayout>
         </androidx.cardview.widget.CardView>
